--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   build-and-publish:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
     name: build
     runs-on: ubuntu-latest
     permissions:
