--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,8 +9,12 @@ on:
 
 
 jobs:
-  reusable-workflow:
-    name: "reusable"
+  build:
+    name: "build"
+    permissions:
+      contents: read
+      packages: write
+      pages: write
+      id-token: write
     uses: vishalmamidi/workflows/.github/workflows/build-gradle.yml@main
-    with:
-      deploy: false
+    secrets: inherit
