added proper permissions

--- a/.github/workflows/quick-checks.yml
+++ b/.github/workflows/quick-checks.yml
@@ -12,8 +12,9 @@ on:
 jobs:
   quick-checks-unit:
     name: 🚨
-    # permissions:
-    #   contents: read
-    permissions: write-all
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     uses: vishalmamidi/workflows/.github/workflows/quick-checks-unit.yml@main
     secrets: inherit
