--- a/.github/workflows/quick-checks.yml
+++ b/.github/workflows/quick-checks.yml
@@ -14,5 +14,6 @@ jobs:
     name: 🚨
     permissions:
       contents: read
+      checks: write
     uses: vishalmamidi/workflows/.github/workflows/quick-checks-unit.yml@main
     secrets: inherit
