--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,3 +18,14 @@ jobs:
       id-token: write
     uses: vishalmamidi/workflows/.github/workflows/build-gradle.yml@main
     secrets: inherit
+
+  pages:
+    needs:
+      build
+    name: "pages"
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    uses: vishalmamidi/workflows/.github/workflows/deploy-pages.yml@main
+
